--- a/src/main.styl
+++ b/src/main.styl
@@ -1,17 +1,84 @@
 @import 'normalize-styl/normalize'
 
+equalizer_height = 30px
+control_panel_height = 40px
+player_height = 500px
+
+body
+	background #30485f
+	font-weight 300
+	font-size 14px
+
+
 
 
 .music-player
 	margin 70px auto
-	min-height 270px // delete it
-	width 500px
-	background green
+	width player_height
 
 	overflow hidden
 	border-radius 5px
+	color #87aacb
+	box-shadow 0 0 15px alpha(#09131d, .5)
+	font-size .9em
+
+
 
 
 .visualization
+	position relative
 	height 200px
-	background red
+	background #09131d url(http://i.ytimg.com/vi/r40giRjA_yY/maxresdefault.jpg) center no-repeat
+	background-size cover
+
+	&__line
+		absolute bottom
+		height 30px
+		border-bottom 3px solid #50e3c2
+		width 42%
+
+
+		// &:after
+		// 	content ''
+		// 	absolute right bottom
+		// 	size 2px 10px
+		// 	background #ff7272
+
+
+
+
+.control-panel
+	background #121f2b
+	padding 6px 15px 4px
+
+	&__play
+		background url(images/play.svg) no-repeat
+	&__stop
+		background url(images/stop.svg) no-repeat
+	&__play, &__stop
+		size 18px
+		background-size cover
+		display inline-block
+		margin 5px
+
+	&__song-name
+		width 400px
+		line-height control_panel_height - 10px // exclude .control-panel padding
+		float right
+
+		text-align center
+		font-size 1.1em
+
+
+
+.equalizer
+	cursor pointer
+	line-height equalizer_height
+	background #09131d
+	text-align center
+
+	for btn in 'normal' 'pop' 'rock' 'jazz' 'classic'
+		&__{btn}
+			display inline-block
+			width 20%
+
