Added equalizer presets

--- a/src/main.styl
+++ b/src/main.styl
@@ -135,7 +135,7 @@ $equalizer__btn
 	text-align center
 	border-top 1px solid #283d51
 
-	for btn in 'normal' 'pop' 'rock' 'jazz' 'classic'
+	for btn in 'normal' 'pop' 'rock' 'reggae' 'classic'
 		&__{btn}
 			@extend $equalizer__btn
 
